README: Update build requirements for debian
The current set of required packages was not sufficient to complete the
`make`, after following the usual route of:
`sudo apt-get install debhelper dh-autoreconf autotools-dev\
                      autoconf-archive doxygen graphviz libasound2-dev\
                      libtool libjpeg-dev qtbase5-dev libqt5opengl5-dev\
                      libudev-dev libx11-dev pkg-config udev make gcc git`
`./bootstrap.sh`
`./configure`
`make`

The following error was presented:
`moc: could not find a Qt installation of ''`

Fix this issue by adding the `qt5-default` package to the list of
requirements.

Fixes: 8d2093a8a4bc43622cd68aeb85fb2b817de55993

Tested on: Debian version: Debian GNU/Linux 10 & Debian GNU/Linux 9
(Buster & Stretch(inside of a lxc container))
Additionally, I tested to build on a fresh VM, where I faced the same
problem.

Signed-off-by: Sebastian Fricke <sebastian.fricke.linux@gmail.com>
Signed-off-by: Hans Verkuil <hverkuil-cisco@xs4all.nl>

--- a/README
+++ b/README
@@ -29,10 +29,9 @@ each distro.
 
 On Debian and derivated distributions, you need to install the following
 packages with apt-get or aptitude:
-	debhelper dh-autoreconf autotools-dev autoconf-archive
-        doxygen graphviz libasound2-dev
-	libtool libjpeg-dev qtbase5-dev libqt5opengl5-dev libudev-dev libx11-dev
-	pkg-config udev make gcc git
+    debhelper dh-autoreconf autotools-dev autoconf-archive doxygen graphviz
+    libasound2-dev libtool libjpeg-dev qtbase5-dev qt5-default
+    libqt5opengl5-dev libudev-dev libx11-dev pkg-config udev make gcc git
 
 
 On Fedora, the package list for a minimal install with dnf or yum is:
