keytable: fix repeat formatting
Here is a dump of ir-keytable output:

Found /sys/class/rc/rc0/ with:
	Name: gpio_ir_recv
	Driver: gpio_ir_recv
	Default keymap: rc-rc6-mce
	Input device: /dev/input/event0
	LIRC device: /dev/lirc1
	Attached BPF protocols: Operation non permise
	Supported kernel protocols: lirc rc-5 rc-5-sz jvc sony nec sanyo mce_kbd rc-6 sharp xmp imon
	Enabled kernel protocols: lirc sony
	bus: 25, vendor/product: 0001:0001, version: 0x0100
	Repeat delay = 500 ms, repeat period = 125 ms

The last line does not respect the key: value syntax because we have

Repeat delay = 500 ms, repeat period = 125 ms
instead of
Repeat delay: 500 ms, repeat period: 125 ms

Signed-off-by: Vince Ricosti <vricosti@outlook.com>
Signed-off-by: Sean Young <sean@mess.org>

--- a/v4l-utils-po/ca.po
+++ b/v4l-utils-po/ca.po
@@ -506,7 +506,7 @@ msgstr ""
 
 #: utils/keytable/keytable.c:1706
 #, c-format
-msgid "Repeat delay = %d ms, repeat period = %d ms\n"
+msgid "Repeat delay: %d ms, repeat period: %d ms\n"
 msgstr ""
 
 #: utils/keytable/keytable.c:1725
