--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+v4l-utils-1.30.1
+----------------
+
+Gregor Jasny (1):
+      licenses: update copyright files to remove fsf address
+
+Hans Verkuil (1):
+      v4l2-compliance: run testBlockingWait when streaming
+
+
 v4l-utils-1.30.0
 ----------------
 
